# KDAZ

./: .gitignore  CLAUDE.md
agent/: .gitignore  README.md  requirements.txt
agent/docs/: feature-schema.md
agent/engine-bridge/: Cargo.toml  pyproject.toml  smoke_test.py
agent/engine-bridge/src/: batch_selfplay.rs  encoder.rs  lib.rs  mcts.rs
agent/kd-features/: Cargo.toml
agent/kd-features/src/: encoder.rs  lib.rs  serialize.rs
agent/kdagent/: __init__.py  arena.py  bench.py  dataset.py  encoder.py  epoch_sweep.py  net.py  selfplay.py  server.py  test_arena.py  test_encoder.py  test_net.py  test_rust_encoder.py  test_train.py  trace.py  train.py
agent/kdagent/mcts/: __init__.py  evaluators.py  search.py  test_mcts.py
agent/runs/: gen0.best.pt  gen0.last.pt  gen1.best.pt
agent/selfplay-rs/: Cargo.toml
agent/selfplay-rs/src/: main.rs  pool.rs
board-game-engine/: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
board-game-engine/docs/: engine-design.md
board-game-engine/docs/bga/: README.md  domino-verification.html  kingdomino_dominoes_bga.json
board-game-engine/src/: lib.rs
board-game-engine/src/components/: domino.rs  mod.rs  terrain.rs
board-game-engine/src/core/: action.rs  mod.rs  setup.rs  state.rs  turn.rs
board-game-engine/src/rules/: mod.rs  place.rs  score.rs
board-game-engine/src/utils/: mod.rs
board-game-engine/tests/: full_game.rs  properties.rs
web/: README.md
web/app/: index.html  main.js  style.css
